# My_minishell

./: CMakeLists.txt  Makefile  README.md  a.out  debug.c  ls  ls.c  main.c  minishell  minishell.c  minishell.h  notas.c  notas.txt  notes.txt  olivia  parsing.c  tokenizer.c  www
Builtins/: builtins.c  builtins2.c  builtins_utils.c  cd_utils.c  clean.c  env_builtins.c  exec_builtin.c  export_no_args.c  unset.c
Exorcise/: and_or.c  exec.c  execution.c  execution_utils.c  find_path.c  heredoc.c  if_redirect.c  pipe.c  pipe_utils.c  process.c  solo_redirect.c
Main/: main.c  utils.c
Parsing/: expansion_and_quotes_validation.c  format_input.c  ft_error.c  ft_error2.c  ft_lexer.c  ft_utils.c  ft_utils2.c  print_error.c  quotes_handler.c  reset.c  subshell.c  tokenizer.c
Signal/: signal.c  signal_in_heredoc.c
Tester/: debug.c  main.c
Tree_struct/: check_priority.c  free_tree.c  node_creator.c  search.c  tree_create.c  tree_utils.c
Wildcard/: join_matrices.c  len_except.c  list_to_matrix.c  quotes_handler.c  quotes_utils.c  read_cd.c  verify_ls_flag.c  verify_utils.c  wildcard.c  wildcard.h  wildcard_parsing.c  wildcard_utils.c  wildcard_utils2.c  wildcard_utils3.c
bonus/: minishell_bonus.h
libft/: Makefile  ft_bzero.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstdelone_bonus.c  ft_lstlast_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_split.c  ft_split_utils.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  libft.h  (+10 more)
(+184 files in other folders)
